GET, POST, DELETE methods added
