# utils/models.js
@@ -1,26 +1,14 @@
 "use strict";
 var mongoose = require("mongoose");
 var config = require("../config/config");
-var uri = "mongodb://" + config.urlMongo + ":" + config.portMongo + "/sabius";
+var uri = "mongodb://" + config.urlMongo + ":" + config.portMongo + "/tfg1718-arp";
 var promise = mongoose.connect(uri);
 // mongoose.Promise = global.Promise;
 var Schema = mongoose.Schema;
 
-// create a schema
-/*var GroupSchema = new Schema({
-  groupName: {
-    type: Object,
-    items: {
-      name: String,
-      orcid: String,
-      authodId: String
-    }
-  } 
-});*/
-
 var RenderSchema = new Schema({
   id: String,
-  model: String,
+  sampleModel: String,
   view: String,
   ctrl: String,
   type: String
@@ -32,7 +20,7 @@ var RenderSchema = new Schema({
 
 // the schema is useless so far
 // we need to create a model using it
-var Group = mongoose.model("groups", RenderSchema);
+var Render = mongoose.model("renders", RenderSchema);
 
 // make this available to our users in our Node applications
-module.exports = Group;
+module.exports = Render;
